[back] model reorganization, implementation of search and pagination, account update methods

--- a/access-api/src/main/resources/application.properties
+++ b/access-api/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=access-api
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.root=DEBUG
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=access
+
+
